fix card size on mobile and icone position for long task name

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,10 +8,14 @@
 }
 
 .card{
-
-    width: 30rem;
-
+    width: 97%;
 }
+
+@media screen and (min-width: 512px) {
+    .card{
+        width: 30rem;
+    }
+
 .add-card{
     height: 10rem;
     border-style: dashed;
